<resources>
    <string name="app_name">Mobile_lab6</string>
    <string name="crime_title_hint">Введите название преступления</string>
    <string name="crime_title_label">Навзвание</string>
    <string name="crime_details_label">Дата преступления</string>
    <string name="crime_solved_label">Решено</string>
    <string name="new_crime">Новое преступление</string>
    <string name="crime_suspect_text">Подозреваемый</string>
    <string name="crime_report_text">Отправить отчет</string>
    <string name="crime_report">%1$s! Дата преступления: %2$s. %3$s, и %4$s</string>
    <string name="crime_report_solved">Преступление решено</string>
    <string name="crime_report_unsolved">Преступление не решено</string>
    <string name="crime_report_no_suspect">подозреваемого нет.</string>
    <string name="crime_report_suspect">подозреваемый - %s.</string>
    <string name="crime_report_subject">CriminalIntent отчет о преступлении</string>
    <string name="send_report">Отправить отчет</string>
</resources>