<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label" />

    <EditText
        android:id="@+id/crime_title"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:hint="@string/crime_title_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label" />

    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:backgroundTint="#3F51B5"
        android:textColor="#FFFFFF"
        android:text="Выберите время" />

    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/crime_solved_label" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_suspect_text" />

    <Button
        android:id="@+id/crime_suspect"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/crime_suspect_text"
        android:textColor="#000000" />

    <Button
        android:id="@+id/crime_report"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:text="@string/crime_report_text" />

</LinearLayout>